# project

./: .env.example  README.md  composer.json  package-lock.json
app/Models/: MasterFlow.php  MasterFlowConnection.php  MasterFlowStep.php  MasterFlowStepChecklist.php  Project.php  ProjectProcess.php  ProjectProcessChecklist.php  ProjectProcessComment.php  ProjectProcessConnection.php  ProjectProcessHistory.php  Role.php  RolePermission.php  User.php
app/Support/: ProjectFlowBuilder.php  ProjectProcessActivityService.php  ProjectProgressService.php
bootstrap/: app.php
config/: access_matrix.php  app.php  database.php
database/: database.sqlite  mysql-data-export.sql
database/migrations/: 2026_06_04_090000_create_master_flows_table.php  2026_06_05_100000_create_roles_table.php  (+23 more)
desktop/: CMakeLists.txt  ProjectDesktop.sln  ProjectDesktop.vcxproj  ProjectDesktop.vcxproj.filters  README.md  UpgradeLog.htm  main.cpp
desktop/ProjectDesktop/x64/Debug/: ProjectDesktop.exe.recipe  ProjectDesktop.ilk  vc143.idb
desktop/ProjectDesktop/x64/Debug/ProjectDesktop.tlog/: Cl.items.tlog  ProjectDesktop.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
desktop/ProjectDesktop/x64/Release/: ProjectDesktop.exe.recipe  ProjectDesktop.iobj  ProjectDesktop.ipdb
desktop/ProjectDesktop/x64/Release/ProjectDesktop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjectDesktop.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
routes/: web.php
scripts/: run-dev.php
(+40 files in other folders)
